--- a/.rubocop.yaml
+++ b/.rubocop.yaml
@@ -1,3 +1,7 @@
+require: 
+  - rubocop-performance
+  - rubocop-rails
+ 
 inherit_from:
   - .rubocop_todo.yml
   - https://bitbucket.org/alan_maule/junglescout-rubocop/raw/master/base_config.yaml
