--- a/base_config.yml
+++ b/base_config.yml
@@ -104,7 +104,7 @@ Style/BlockDelimiters:
   # words.each { |word|
   #   word.flip.flop
   # }.join("-")
-  EnforcedStyle: braces_for_chaining
+  EnforcedStyle: line_count_based
   Exclude:
     - 'spec/**/*'
 
