--- a/base_config.yml
+++ b/base_config.yml
@@ -106,7 +106,10 @@ Style/BlockDelimiters:
   # }.join("-")
   EnforcedStyle: line_count_based
   Exclude:
-    - 'spec/**/*'
+    - 'spec/**/*' 
+
+Style/Documentation:
+  Enabled: false
 
 Style/RescueStandardError:
   # In some cases we need to rescue an unknown error, log it and reraise
